# boilerplate

./: .gitignore  Note.md  README.md
R/: DESCRIPTION  NAMESPACE
R/R/: extendr-wrappers.R
R/src/: Makevars  Makevars.win  boilerplateR-win.def  entrypoint.c
R/src/rust/: Cargo.toml
R/src/rust/src/: lib.rs
core/: Cargo.toml
core/argsproc/src/: lib.rs
core/boilerplate/: Cargo.toml
core/boilerplate/src/: core.rs  lib.rs  main-b.rs  main.rs
core/boilerplate/src/core/: args.rs  err.rs  tests.rs
core/boilerplate/src/core/tests/: python.rs  r.rs  tests2.rs
core/clu/: Cargo.toml
core/clu/src/: main-b.rs  main.rs
cs/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
installer/: Cargo.toml  README.md
installer/src/: main.rs
pyo3/: Cargo.toml  pyproject.toml
pyo3/python/boilerplatePyo/: __init__.py
pyo3/src/: lib.rs
python/: setup.py
python/boilerplatePy/: __init__.py  boilerplatePy.py
tests/: example.qmd  test.py  test2.py  test3.py
