[package]
name = "ht-install"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
colored = "2.1.0"

clap = { version = "4.4.10", features = ["derive",] }
indoc = "2.0.4"

tempfile = "3.5.0"