[package]
name = "boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "boilerplate"
path = "src/lib.rs"
crate-type = [ "rlib" ]

[features]
default = []
r-lang = ["extendr-api"]
python = ["pyo3", "serde-pyobject"]

[dependencies]
argsproc = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
indoc = "*"

powershell_script = "1.1.0"
tempfile = "3.5.0"

serde = { version = "*", features = ["derive"] }
serde_json = "*"
once_cell = "*"
paste = "*"

clap = { version = "4.4.10", features = ["derive",] }
extendr-api = { optional = true, version = "*" }
pyo3 = { optional = true, version = "*", features = ["auto-initialize",] }
serde-pyobject = { optional = true, version ="*" }

[dev-dependencies]
pyo3 = { version = "*", features = ["auto-initialize",] }
serde-pyobject = "*"